{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 311,
  "lineage": "11ea76a4-b2b5-e54e-60e0-710ab35976e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ac6129392a0f2",
            "arn": "arn:aws:ec2:ap-south-1:524155591285:instance/i-07f5fbe4c68e27f11",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f5fbe4c68e27f11",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf6228f6d0d1b59d",
            "private_dns": "ip-192-168-1-228.ap-south-1.compute.internal",
            "private_ip": "192.168.1.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-007b445f79796d6ff",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a62e2694b01afa69",
            "tags": {
              "Name": "mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04263d4c5fd761c98"
            ]
          },
          "dependencies": [
            "aws_security_group.mywebsecurity",
            "aws_subnet.privatesubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000e4324711d48e58",
            "arn": "arn:aws:ec2:ap-south-1:524155591285:instance/i-02ba25a10f8148ce6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ba25a10f8148ce6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d16e077fe06d0cf5",
            "private_dns": "ip-192-168-0-181.ap-south-1.compute.internal",
            "private_ip": "192.168.0.181",
            "public_ip": "13.127.82.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-05961deb9abde2a33",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ede56313746d2290",
            "tags": {
              "Name": "wordpress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04263d4c5fd761c98"
            ]
          },
          "dependencies": [
            "aws_security_group.mywebsecurity",
            "aws_subnet.publicsubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ShreyasGateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524155591285:internet-gateway/igw-0a17adea828656446",
            "id": "igw-0a17adea828656446",
            "owner_id": "524155591285",
            "tags": {
              "Name": "shreyas_gateway"
            },
            "vpc_id": "vpc-07457c3dec34a5425"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shreyas_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-003d1c8dbb984ba94",
            "owner_id": "524155591285",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a17adea828656446",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shreyas_routetable"
            },
            "vpc_id": "vpc-07457c3dec34a5425"
          },
          "dependencies": [
            "aws_internet_gateway.ShreyasGateway",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00148f6b589524a4e",
            "route_table_id": "rtb-003d1c8dbb984ba94",
            "subnet_id": "subnet-0ede56313746d2290"
          },
          "dependencies": [
            "aws_internet_gateway.ShreyasGateway",
            "aws_route_table.shreyas_table",
            "aws_subnet.publicsubnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mywebsecurity",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524155591285:security-group/sg-04263d4c5fd761c98",
            "description": "Allow HTTP,SSH,ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04263d4c5fd761c98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MYSQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_web_security",
            "name_prefix": null,
            "owner_id": "524155591285",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mywebserver_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07457c3dec34a5425"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524155591285:subnet/subnet-0a62e2694b01afa69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0a62e2694b01afa69",
            "map_public_ip_on_launch": false,
            "owner_id": "524155591285",
            "tags": {
              "Name": "shreyas_subnet_private"
            },
            "vpc_id": "vpc-07457c3dec34a5425"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524155591285:subnet/subnet-0ede56313746d2290",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0ede56313746d2290",
            "map_public_ip_on_launch": false,
            "owner_id": "524155591285",
            "tags": {
              "Name": "shreyas_subnet_public"
            },
            "vpc_id": "vpc-07457c3dec34a5425"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:524155591285:vpc/vpc-07457c3dec34a5425",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-001d8a5268b29ec0b",
            "default_route_table_id": "rtb-0c32c8808d693b7c0",
            "default_security_group_id": "sg-0807877c187bf2361",
            "dhcp_options_id": "dopt-4f2be824",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07457c3dec34a5425",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c32c8808d693b7c0",
            "owner_id": "524155591285",
            "tags": {
              "Name": "Shreyas_vpc"
            }
          }
        }
      ]
    }
  ]
}